# bowerbot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  config.example.json  pyproject.toml  release-please-config.json
.github/: FUNDING.yml
.github/workflows/: branch-check.yml  release-please.yml
src/bowerbot/: __init__.py  agent.py  cli.py  config.py  dispatcher.py  project.py  scene_builder.py  state.py  token_manager.py
src/bowerbot/engine/: __init__.py  asset_assembler.py  dependency_resolver.py  packager.py  scene_graph.py  stage_writer.py  validator.py
src/bowerbot/gateway/: __init__.py
src/bowerbot/prompts/: __init__.py  core.md  scene_building.md
src/bowerbot/schemas/: __init__.py  assets.py  intake.py  lights.py  materials.py  models.py  textures.py  transforms.py  validation.py
src/bowerbot/services/: __init__.py  asset_service.py  dependency_service.py  geometry_service.py  intake_service.py  light_service.py  material_service.py  nested_service.py  packaging_service.py  stage_service.py  validation_service.py
src/bowerbot/skills/: __init__.py  base.py  registry.py
src/bowerbot/tools/: __init__.py  _helpers.py  asset_tools.py  light_tools.py  material_tools.py  stage_tools.py  validation_tools.py
tests/: _helpers.py  test_agent_anthropic.py  test_agent_openai.py  test_assembly_skill.py  test_asset_folders.py  test_end_to_end.py  test_engine.py  test_intake.py  test_lights.py  test_llm.py  test_materials.py  test_project.py  test_sketchfab.py  test_sketchfab_live.py  test_skills.py  test_token_manager.py
(+16 files in other folders)
