[project]
name = "bowerbot"
version = "1.0.3"
description = "AI-powered 3D scene assembly from natural language using OpenUSD"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Arturo Morales Rangel", email = "arangel@binarycore.us" },
]
keywords = ["usd", "openusd", "3d", "scene-assembly", "ai", "llm", "digital-twin"]

dependencies = [
    # Core
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    # LLM
    "litellm>=1.40",
    # HTTP
    "httpx>=0.27",
    # USD (NVIDIA pre-built wheels on PyPI)
    "usd-core>=24.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
]

[project.scripts]
bowerbot = "bowerbot.cli:main"

[project.entry-points."bowerbot.skills"]
local = "bowerbot.skills.local:LocalSkill"
sketchfab = "bowerbot.skills.sketchfab:SketchfabSkill"
textures = "bowerbot.skills.textures:TexturesSkill"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
